--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
 <body>
 	<a href"https://zhuanlan.zhihu.com/p/91652100">怎么用github建立网站</a>
+	<a href="https://www.baidu.com">百度</a>
 </body>
 </html>
