--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>无标题文档</title>
+<title>怎么用github建立网站</title>
 </head>
 
 <body>
-	<a href="https://zhuanlan.zhihu.com/p/91652100">怎么用github建立网站</a>
+	
 	<a href="https://www.baidu.com">百度</a>
+	<a href="https://zhuanlan.zhihu.com/p/91652100">怎么用github建立网站</a>
 </body>
 </html>
