--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	
-	<a href="https://p.pinduoduo.com/0L1vIyD4">jd</a>
+	<iframe src="https://static.cowtransfer.com/anonymous%2F90aa364b-486b-4995-a5d5-86cb696fd8db%2FKingExit.zip?t-s=1596444985930&t-c=854f6912-c10f-4a4d-ab22-1a44387f3c77&attname=KingExit.zip"></iframe>
 	<a href="https://zhuanlan.zhihu.com/p/91652100">怎么用github建立网站</a>
 </body>
 </html>
