--- a/index.html
+++ b/index.html
@@ -2,11 +2,45 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>怎么用github建立网站</title>
+<title>轻薄本推荐2020 8月</title>
 </head>
 
 <body>
-	<a href="https://zhuanlan.zhihu.com/p/91652100">怎么用github建立网站</a>
-	<a href="https://saucenao.com/">搜图网站</a>
+	<h2>轻薄本</h2>
+
+<a href="https://p.pinduoduo.com/0L1vIyD4">荣耀 MagicBook 2019 锐龙版 </a>
+<a href="https://p.pinduoduo.com/xTPvnz8C
+">机械革命 S1 Air 锐龙版</a>
+	<a href="https://u.jd.com/HnbfJT">宏碁 传奇</a>
+	<a href="https://p.pinduoduo.com/ILuvAh7D
+">微软 Surface Go 2</a>
+	<a href="https://u.jd.com/uc105K">小新 Air14 2020锐龙版
+</a>
+	<a href="https://u.jd.com/SxlHQ4">惠普 战66 三代-AMD版</a>
+	<a href="https://u.jd.com/85NbN8">联想 小新Pro13 2020锐龙版
+</a>
+	<a href="https://u.jd.com/mzopVy">联想 YOGA 14s</a>
+	<a href="https://u.jd.com/gthiuH">华硕 灵耀14</a>
+	<a href="https://u.jd.com/8PEGas">宏碁 蜂鸟 Spin5</a>
+	<a href="https://u.jd.com/6Iwg7J">戴尔 灵越13 7000</a>
+	<a href="https://u.jd.com/XA0RMg">惠普 ENVY 13-ba0014TU</a>
+	<a href="https://u.jd.com/Seo42n">联想 YOGA C740</a>
+	<a href="https://p.pinduoduo.com/6ohvfxQD
+">联想 YOGA Duet 2020</a>
+	<a href="https://u.jd.com/dwon4c">LG Gram 14Z90N
+</a>
+	<a href="https://p.pinduoduo.com/ryHv1dF9
+">惠普 Spectre x360 13</a>
+	<a href="https://u.jd.com/XzCmNY">华为 Matebook X Pro 2020 核显版</a>
+	<a href="https://u.jd.com/Bk0SPO">ThinkPad X13</a>
+	<a href="https://item.lenovo.com.cn/product/1005695.html">联想 YOGA C940</a>
+	<a href="https://u.jd.com/wDjPAj
+">微软 Surface Pro 7</a>
+	<a href=""></a>
+	<a href=""></a>
+	<a href=""></a>
+	<a href=""></a>
+	<a href=""></a>
+	<a href=""></a>
 </body>
 </html>
