--- a/tink/rbop.html
+++ b/tink/rbop.html
@@ -1,46 +1,47 @@
-<！doctype html >
-< html >
-< 头>
-< meta  charset =“ utf-8 ” >
-< title >轻薄本推荐2020 8月</ title >
-</ head >
 
-< 身体>
-	< h2 >轻薄本</ h2 >
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>轻薄本推荐2020 8月</title>
+</head>
 
-< 一个 HREF = “ https://p.pinduoduo.com/0L1vIyD4 ” >荣耀MagicBook 2019锐龙版</ 一> < BR >
-< a  href =“ https://p.pinduoduo.com/xTPvnz8C
-“ >机械革命S1空气锐龙版</ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/HnbfJT ” >宏碁传奇</ 一> < BR >
-	< a  href =“ https://p.pinduoduo.com/ILuvAh7D
-“ >微软表面转到2 </ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/uc105K ” >小新Air14 2020锐龙版
-</ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/SxlHQ4 ” >惠普战66三代-AMD版</ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/85NbN8 ” >联想小新Pro13 2020锐龙版
-</ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/mzopVy ” >联想YOGA 14S </ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/gthiuH ” >华硕灵耀14 </ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/8PEGas ” >宏碁蜂鸟Spin5 </ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/6Iwg7J ” >戴尔灵越13 7000 </ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/XA0RMg ” >惠普ENVY 13 ba0014TU </ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/Seo42n ” >联想YOGA C740 </ 一> < BR >
-	< a  href =“ https://p.pinduoduo.com/6ohvfxQD
-“ >联想YOGA二重奏2020 </ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/dwon4c ” > LG革兰氏14Z90N
-</ 一> < BR >
-	< a  href =“ https://p.pinduoduo.com/ryHv1dF9
-“ >惠普幽灵X360 13 </ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/XzCmNY ” >华为Matebook X PRO 2020核显版</ 一> < BR >
-	< 一个 HREF = “ https://u.jd.com/Bk0SPO ” >的ThinkPad X13 </ 一> < BR >
-	< 一个 HREF = “ https://item.lenovo.com.cn/product/1005695.html ” >联想YOGA C940 </ 一> < BR >
-	< a  href =“ https://u.jd.com/wDjPAj
-“ >微软表面Pro 7中</ 一> < BR >
-	< 一个 HREF = “” > </ 一>
-	< 一个 HREF = “” > </ 一>
-	< 一个 HREF = “” > </ 一>
-	< 一个 HREF = “” > </ 一>
-	< 一个 HREF = “” > </ 一>
-	< 一个 HREF = “” > </ 一>
-</ body >
-</ html >
+<body>
+	<h2>轻薄本</h2>
+
+<a href="https://p.pinduoduo.com/0L1vIyD4">荣耀 MagicBook 2019 锐龙版 </a><br>
+<a href="https://p.pinduoduo.com/xTPvnz8C
+">机械革命 S1 Air 锐龙版</a><br>
+	<a href="https://u.jd.com/HnbfJT">宏碁 传奇</a><br>
+	<a href="https://p.pinduoduo.com/ILuvAh7D
+">微软 Surface Go 2</a><br>
+	<a href="https://u.jd.com/uc105K">小新 Air14 2020锐龙版
+</a><br>
+	<a href="https://u.jd.com/SxlHQ4">惠普 战66 三代-AMD版</a><br>
+	<a href="https://u.jd.com/85NbN8">联想 小新Pro13 2020锐龙版
+</a><br>
+	<a href="https://u.jd.com/mzopVy">联想 YOGA 14s</a><br>
+	<a href="https://u.jd.com/gthiuH">华硕 灵耀14</a><br>
+	<a href="https://u.jd.com/8PEGas">宏碁 蜂鸟 Spin5</a><br>
+	<a href="https://u.jd.com/6Iwg7J">戴尔 灵越13 7000</a><br>
+	<a href="https://u.jd.com/XA0RMg">惠普 ENVY 13-ba0014TU</a><br>
+	<a href="https://u.jd.com/Seo42n">联想 YOGA C740</a><br>
+	<a href="https://p.pinduoduo.com/6ohvfxQD
+">联想 YOGA Duet 2020</a><br>
+	<a href="https://u.jd.com/dwon4c">LG Gram 14Z90N
+</a><br>
+	<a href="https://p.pinduoduo.com/ryHv1dF9
+">惠普 Spectre x360 13</a><br>
+	<a href="https://u.jd.com/XzCmNY">华为 Matebook X Pro 2020 核显版</a><br>
+	<a href="https://u.jd.com/Bk0SPO">ThinkPad X13</a><br>
+	<a href="https://item.lenovo.com.cn/product/1005695.html">联想 YOGA C940</a><br>
+	<a href="https://u.jd.com/wDjPAj
+">微软 Surface Pro 7</a><br>
+	<a href=""></a>
+	<a href=""></a>
+	<a href=""></a>
+	<a href=""></a>
+	<a href=""></a>
+	<a href=""></a>
+</body>
+</html>
