--- a/msn2.5/msn.html
+++ b/msn2.5/msn.html
@@ -6,7 +6,6 @@
 </head>
 
 <body>
-	
-	<iframe src="https://static.cowtransfer.com/anonymous%2F78ad4626-5812-48f8-89f4-bc51d9efac45%2F%25E7%25BE%258E%25E5%25B0%2591%25E5%25A5%25B3%25E4%25B8%2587%25E5%258D%258E%25E9%2595%259C2.5%25E5%25A4%2596%25E4%25BC%25A0.7z?t-s=1596486081359&t-c=9074d942-eadd-4ee6-bccd-6a289a616bd8&attname=%E7%BE%8E%E5%B0%91%E5%A5%B3%E4%B8%87%E5%8D%8E%E9%95%9C2.5%E5%A4%96%E4%BC%A0.7z"></iframe>
+	<a href="https://static.cowtransfer.com/anonymous%2F78ad4626-5812-48f8-89f4-bc51d9efac45%2F%25E7%25BE%258E%25E5%25B0%2591%25E5%25A5%25B3%25E4%25B8%2587%25E5%258D%258E%25E9%2595%259C2.5%25E5%25A4%2596%25E4%25BC%25A0.7z?t-s=1596486081359&t-c=9074d942-eadd-4ee6-bccd-6a289a616bd8&attname=%E7%BE%8E%E5%B0%91%E5%A5%B3%E4%B8%87%E5%8D%8E%E9%95%9C2.5%E5%A4%96%E4%BC%A0.7z">美少女万华镜2.5</a>
 </body>
 </html>
