--- a/msn2.5/msn.html
+++ b/msn2.5/msn.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-	<a href="https://cowtransfer.com/cream?sguid=aroundus">美少女万华镜2.5</a>
+	<a href="https://cowtransfer.com/s/78ad4626581248">美少女万华镜2.5</a>
 </body>
 </html>
